--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "QR-Based TON Payment Bot for Telegram",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only -r ./tsconfig-paths-bootstrap.js src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
@@ -59,6 +59,7 @@
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "engines": {
