--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-TELEGRAM_BOT_USERNAME=TONPixBot
+TELEGRAM_BOT_USERNAME=pixTONBot
 
 # TON Blockchain Configuration
 TON_NETWORK=testnet
@@ -17,7 +17,7 @@ PORT=3000
 NODE_ENV=development
 
 # Database (Optional for MVP)
-DATABASE_URL=postgresql://username:password@localhost:5432/tonpix
+DATABASE_URL=postgresql://username:password@localhost:5432/pixton
 
 # Logging
 LOG_LEVEL=info
