--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tonpix",
+  "name": "pixton",
   "version": "1.0.0",
   "description": "QR-Based TON Payment Bot for Telegram",
   "main": "dist/index.js",
@@ -12,8 +12,8 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
-    "docker:build": "docker build -t tonpix .",
-    "docker:run": "docker run -p 3000:3000 tonpix"
+    "docker:build": "docker build -t pixton .",
+    "docker:run": "docker run -p 3000:3000 pixton"
   },
   "keywords": [
     "ton",
@@ -24,7 +24,7 @@
     "crypto",
     "payment"
   ],
-  "author": "TONPix Team",
+  "author": "pixTON Team",
   "license": "MIT",
   "dependencies": {
     "@ton/core": "^0.56.0",
